# STM32F429IGT6-Template

./: .clang-format  .gitignore  README.md
crm/freeRTOS/portable/GCC/ARM_CM4F/: port.c
doc/README/: Tasks说明.md  模板搭建教程.md  模板构造教程.md  环境搭建教程.md
mcu/Libraries/CMSIS/: startup_stm32f429xx.s  stm32f429xx.h  stm32f4xx.h  system_stm32f4xx.c  system_stm32f4xx.h
mcu/Libraries/HAL_Driver/: stm32f4xx_hal_conf.h  stm32f4xx_hal_timebase_rtc_wakeup_template.c
mcu/Libraries/ld/: STM32F429IGTX_FLASH.ld
mcu/libx/: ERR.h  __port_config__.c  __port_config__.h  __port_type__.h  log.h  ringbuffer.c  ringbuffer.h  syscalls.c
mcu/project/: CMakeLists.txt
mcu/user/: FreeRTOSConfig.h  main.c  main.h  stm32f4xx_it.c  stm32f4xx_it.h
project/: CMakeLists.txt  arm-gnu-none-eabi.cmake
